# flux

./: .gitattributes  .gitignore  INLINE_EDIT_PLAN.md  components.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.json  tsconfig.plugin-base.json  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md
.github/chatmodes/: flux-architect.chatmode.md
.github/instructions/: rust.instructions.md  typescript.instructions.md
.github/prompts/: code-review.prompt.md  new-feature.prompt.md
docs/: CURRENT_PROGRESS.md  FRONTEND_BACKEND_INTEGRATION.md  LLM_ANTIHALLUCINATION.md  LLM_SYSTEM_INSTRUCTIONS.md  PROJECT_PLAN.md  architecture.md  feature_spec.md  plugin-system.md  tech_stack.md
docs/skills/: debugging.md  feature-implementation.md  flux-coding.md
plugins/: plugin-build-config.ts
plugins/canvas/: manifest.json  package.json  vite.config.ts
plugins/excalidraw/: manifest.json  package.json  vite.config.ts
plugins/kanban/: manifest.json  package.json  vite.config.ts
scripts/: install-cargo-llvm-cov.mjs
src/: App.css  App.tsx  bindings.ts  detached-doc-shell.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_fts.sql  003_canonicalise_paths.sql  004_plugin_storage.sql  005_tasks.sql
src-tauri/src/: lib.rs  main.rs  state.rs  sweep.rs  types.rs  watcher.rs
src-tauri/src/commands/: export.rs  links.rs  mod.rs
src-tauri/src/commands/fs/: common.rs  gitignore.rs  mod.rs  paths.rs  tests.rs  wikilink.rs
src-tauri/src/commands/fs/tasks/: commands.rs  mod.rs  parse.rs  repo.rs  toggle.rs
src-tauri/src/commands/plugins/: broker.rs  commands.rs  dto.rs  install.rs  manifest.rs  mod.rs  scanner.rs  storage.rs
src-tauri/src/commands/vault/: last_vault.rs  mod.rs
src-tauri/src/db/: mod.rs  repo.rs
src-tauri/tests/: integration_db.rs  integration_db_upsert.rs  integration_fs_deep.rs  integration_fs_edges.rs  integration_fs_impls.rs  integration_fs_more.rs  integration_fs_ops.rs  integration_fts.rs  integration_links.rs  integration_plugins.rs  integration_tasks.rs  integration_trash_archive.rs  integration_vault_lifecycle.rs  integration_walk_md.rs  integration_watcher_reindex.rs  unit_canonicalise.rs  unit_fs_common.rs  unit_fs_wikilink.rs  unit_links.rs  unit_types.rs
src-tauri/tests/common/: mod.rs
(+197 files in other folders)
