[package]
name = "flux"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ── Tauri 2 Core ──────────────────────────────────────────────────────────
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-specta = { version = "=2.0.0-rc.20", features = ["derive", "typescript"] }
specta = { version = "=2.0.0-rc.20", features = ["derive"] }

# ── Async runtime / errors / logging ──────────────────────────────────────
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ── Serialization ─────────────────────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Text indexing ─────────────────────────────────────────────────────────
regex = "1"

# ── SQLite + FTS5 + pool ──────────────────────────────────────────────────
rusqlite = { version = "0.31", features = ["bundled", "uuid", "chrono", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
rusqlite_migration = "1"

# ── File watcher ──────────────────────────────────────────────────────────
notify = "6"
notify-debouncer-full = "0.3"
ignore = "0.4"
walkdir = "2"

# ── IDs / hashing / time ──────────────────────────────────────────────────
uuid = { version = "1", features = ["v4", "v7", "serde"] }
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }

# ── PDF export (native, zero-bundle: uses the 14 built-in PDF fonts) ──────
pulldown-cmark = "0.10"
printpdf = "0.7"

# ── Plugin installer (zip archives shipped by plugin authors) ─────────────
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"


